syntax= "proto3";

package product;

service ProductService{
    rpc Get(Product) returns (Response){}
    rpc GetAll(Request)returns(Response){}
    rpc GetCotisations(Police)returns(Response){}
    rpc GetlistePoliceExterne(Police)returns(Response){}
    rpc GetClientProducts(Client)returns(Response){}
}
message Client{
    string nom=1;
    string prenom=2;
    string dateofbirth=3;
    string abjcardno=4;
}
message Product{
    string id=1;
    string name=2;
}
message Police{
    string police=1;
}

message Etat{
    string police=1;
    string datedebuteffet=2;
    string datefineffet=3;
    string libelleproduit=4;
    string modereglement=5;
    string fractionnement=6;
    string numeropayeur=7;
    string nompayeur=8;
    string telephone=9;
    string profession=10;
    string adresse=11;
    string datenaissance=12;
    string lieunaissance=13;
    string nomsouscripteur=14;
    string quittance=15;
    string prime=16;
    string datecomptable=17;
    string datequittance=18;
    string etatquittance=19;
    string montantsolde=20;
    string montantimpaye=21;
    string nombresolde=22;
    string nombreimpaye=23;
}
message Request{}
message ClientRequest{
    string nom=1;
    string prenom=2;
    string dateofbirth=3;
    
}
message Response{
    Product product=1;
    string etat=2;
    repeated Product products=3;
    repeated Error errors=4;
}
message Error{
    int32 code=1;
    string description=2;
}
message Token{
    string token=1;
    bool valid=2;
    repeated Error errors=3;
}